--- a/.github/workflows/hashblogs.yml
+++ b/.github/workflows/hashblogs.yml
@@ -17,4 +17,4 @@ jobs:
           feed_list: "https://avicreation.hashnode.dev/rss.xml"
           template: "$newline - $randomEmoji(💯,🔥,💫,🚀,🌮) [$title]($url)"
           commit_message: "recent posts section updated"
-          gh_token: ${{ secrets.GITHUB_TOKEN }}
+          gh_token: ${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}
