--- a/.github/workflows/hashblogs.yml
+++ b/.github/workflows/hashblogs.yml
@@ -1,20 +1,14 @@
-name: Hashnode Blog Posts
+name: Latest blog articles
 on:
-  schedule:
-    # Runs every 6 hours of the day
-    - cron: '0 */6 * * *'
-  workflow_dispatch:
-
+  schedule: # Run workflow automatically
+    - cron: '0 * * * *' # Runs every hour, on the hour
+  workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
 jobs:
-  update-readme-with-blog:
-    name: Update this repo's README with the latest blog posts
+  update-readme-with-hashnode-blog:
+    name: Update this repo's README with the latest hashnode blog posts
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          comment_tag_name: "BLOGPOSTS"
-          feed_list: "https://avicreation.hashnode.dev/rss.xml"
-          template: "$newline - $randomEmoji(💯,🔥,💫,🚀,🌮) [$title]($url)"
-          commit_message: "recent posts section updated"
-          gh_token: "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"
+          feed_list: "https://blog.francescociulla.com/rss.xml"
